--- a/com.unity.robotics.ros-tcp-connector/package.json
+++ b/com.unity.robotics.ros-tcp-connector/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.unity.robotics.ros-tcp-connector",
-  "version": "0.7.0-preview",
-  "displayName": "ROS TCP Connector",
+  "version": "0.7.1-preview",
+  "displayName": "ROS TCP Connector - RSL",
   "description": "Bridge components and message generation allowing Unity to communicate with ROS and ROS2 services",
-  "unity": "2020.2",
+  "unity": "2022.3",
   "unityRelease": "0b9",
   "dependencies": {}
 }
